upgrade DBFlute to 1.2.6